--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "atom-innerspace",
   "main": "./lib/atom-innerspace",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Atom package to show invisible characters between words and symbols",
-  "keywords": [
-  ],
+  "keywords": [],
   "repository": "https://github.com/squizlabs/atom-innerspace",
   "license": "BSD-3-Clause",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
